@@ -1,0 +1,7 @@
+package fm.last.commons.kyoto.mapreduce;
+
+public interface JobExecutor {
+
+  void execute(Job job);
+
+}
