@@ -1,4 +1,6 @@
 TBC
+- Implemented check, seize, occupy, MapReduce
+- Updated to use kyotocabinet-java-1.24
 - Stricter checks for closed databases.
 - Provide hints for 'null' error message
 - Builder allows the creation and opening of a database in one step.
